[gd_scene load_steps=10 format=2]

[ext_resource path="res://Codigos/cenaperdeu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/classic_memesbruh03.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sons/sombotaopressionado.mp3" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("animacao/fundoperdeu:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.133333 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animacao/fundo:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("animacao/fundoperdeu:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 711, 356.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("animacao/fundoperdeu:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 498, 367 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "transicaoperdeu"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("animacao/fundoperdeu:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.133333 ), Color( 0, 0, 0, 0.670588 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animacao/fundo:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.388235 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("animacao/fundoperdeu:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 711, 356.5 ), Vector2( 606, 298 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("animacao/fundoperdeu:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 498, 367 ), Vector2( 708, 484 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 57
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=5]
size = 57
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0 )

[node name="cenaperdeu" type="Node2D"]
script = ExtResource( 1 )

[node name="animacao" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/transicaoperdeu = SubResource( 2 )

[node name="fundo" type="ColorRect" parent="animacao"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0 )

[node name="fundoperdeu" type="ColorRect" parent="animacao"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -249.0
margin_top = -183.5
margin_right = 249.0
margin_bottom = 183.5
color = Color( 0, 0, 0, 0.133333 )

[node name="botaoReiniciar" type="Button" parent="animacao/fundoperdeu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.5
margin_top = -23.5
margin_right = 130.5
margin_bottom = 55.5
custom_colors/font_color_hover = Color( 1, 0.984314, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Reiniciar"

[node name="botaoSair" type="Button" parent="animacao/fundoperdeu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.0
margin_top = 64.0
margin_right = 141.0
margin_bottom = 140.0
custom_colors/font_color_hover = Color( 1, 0.937255, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "Sair"

[node name="botaoSelecionado" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="mouse_entered" from="animacao/fundoperdeu/botaoReiniciar" to="." method="_on_botaoReiniciar_mouse_entered"]
[connection signal="pressed" from="animacao/fundoperdeu/botaoReiniciar" to="." method="_on_botaoReiniciar_pressed"]
[connection signal="mouse_entered" from="animacao/fundoperdeu/botaoSair" to="." method="_on_botaoSair_mouse_entered"]
[connection signal="pressed" from="animacao/fundoperdeu/botaoSair" to="." method="_on_botaoSair_pressed"]
